Add navigationView 13may_2022

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="background_color">#ecf0f3</color>
+    <color name="top_color">#071568</color>
 </resources>
