--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawableRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color"
@@ -56,6 +57,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@color/white"
                 android:padding="5dp">
 
                 <EditText
@@ -65,6 +67,7 @@
                     android:background="@color/white"
                     android:gravity="start"
                     android:padding="10dp"
+                    android:textColorHint="@android:color/darker_gray"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHeight_percent="0.9"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -72,20 +75,39 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0" />
 
-
                 <LinearLayout
                     android:id="@+id/fromTextFunctionsLayout"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:gravity="center_horizontal|start"
                     android:orientation="vertical"
+                    android:padding="5dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintHorizontal_bias="1"
-                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintLeft_toRightOf="@+id/fromEditText"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintWidth_percent="0.09">
+                    app:layout_constraintWidth_percent="0.1">
 
+                    <ImageView
+                        android:id="@+id/clearOriginal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:src="@drawable/ic_baseline_clear_24" />
 
+                    <ImageView
+                        android:id="@+id/copyTheoriginalText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:src="@drawable/ic_baseline_content_copy_24" />
+
+                    <ImageView
+                        android:id="@+id/soundPlayFrom"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:src="@drawable/ic_baseline_record_voice_over_24" />
 
 
                 </LinearLayout>
@@ -101,8 +123,9 @@
             android:id="@+id/cardTranslateReplace"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:backgroundTint="@color/white"
             app:cardCornerRadius="90dp"
-            app:cardElevation="5dp"
+            app:cardElevation="10dp"
             app:layout_constraintBottom_toTopOf="@id/cardTrans"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="@+id/cardTrans"
@@ -113,7 +136,8 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_replace" />
+                android:layout_margin="10dp"
+                android:src="@drawable/ic_baseline_cached_24" />
 
         </androidx.cardview.widget.CardView>
 
@@ -133,6 +157,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@color/white"
                 android:padding="5dp">
 
                 <EditText
@@ -145,6 +170,7 @@
                     android:gravity="start"
                     android:padding="10dp"
                     android:textColor="@color/black"
+                    android:textColorHint="@android:color/darker_gray"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHeight_percent="0.95"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -157,17 +183,37 @@
                     android:id="@+id/translateTextFunctionsLayout"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:gravity="center_horizontal|start"
                     android:orientation="vertical"
+                    android:padding="5dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintHorizontal_bias="1"
-                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintLeft_toRightOf="@+id/translateEditText"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintWidth_percent="0.09">
+                    app:layout_constraintWidth_percent="0.1">
+
+                    <ImageView
+                        android:id="@+id/clearTrans"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:src="@drawable/ic_baseline_clear_24" />
+
+                    <ImageView
+                        android:id="@+id/copyTheTranslatetext"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:src="@drawable/ic_baseline_content_copy_24" />
+
+                    <ImageView
+                        android:id="@+id/soundPlayTranslate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_baseline_record_voice_over_24" />
 
 
                 </LinearLayout>
-
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -177,5 +223,27 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/white"
+        android:elevation="10dp"
+        android:overScrollMode="never"
+        app:headerLayout="@layout/header_layout"
+        app:itemIconTint="#061B9C"
+        app:itemTextColor="#061B9C"
+        app:menu="@menu/navogation_menu">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center_horizontal"
+            android:text="Copyright️️ 2022"
+            android:textColor="@color/black" />
+
+    </com.google.android.material.navigation.NavigationView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
